<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_card"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        android:layout_width="match_parent"
        android:layout_height="250dp" />


    <TextView
        android:layout_marginTop="20dp"
        android:layout_below="@+id/iv_card"
        android:textSize="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/login_text_bg"
        android:gravity="center"
        android:text="@string/login_text"
        android:id="@+id/tv_login"
        android:layout_width="90dp"
        android:layout_height="90dp" />


    <TextView
        android:text="@string/register_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_login"
        android:textColor="@color/text_black"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:textSize="12dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/protocol_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>