<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mini.paddling.minicard.view.TitleBarView
        android:id="@+id/tbv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/tbv_title"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/text_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="20dp"
        android:layout_below="@id/text_input_name"
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:inputType="textPassword"
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:visibility="invisible"
        android:layout_margin="20dp"
        android:layout_below="@id/text_input_password"
        android:id="@+id/text_input_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:inputType="textPassword"
        android:id="@+id/et_conform"
        android:hint="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tv_edit"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/text_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>