<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mini.paddling.minicard.view.TitleBarView
        android:id="@+id/tbv_title"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_title"
        android:layout_below="@+id/tbv_title"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:singleLine="true"
            android:id="@+id/et_title"
            android:hint="@string/store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_manager"
        android:layout_below="@+id/tl_title"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:singleLine="true"
        android:id="@+id/et_manager"
        android:hint="@string/business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_phone"
        android:layout_below="@+id/tl_manager"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:singleLine="true"
        android:id="@+id/et_phone"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_address"
        android:layout_below="@+id/tl_phone"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:singleLine="true"
        android:id="@+id/et_address"
        android:hint="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_gexing"
        android:layout_below="@+id/tl_address"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:singleLine="true"
        android:id="@+id/et_gexing"
        android:hint="@string/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>


    <ImageView
        android:src="@drawable/collect_pic"
        android:layout_below="@+id/tl_gexing"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:scaleType="center"
        android:id="@+id/iv_picture"
        android:layout_width="75dp"
        android:layout_height="50dp"/>

    <com.facebook.drawee.view.SimpleDraweeView
        android:visibility="invisible"
        android:src="@drawable/icon_picture"
        android:layout_below="@+id/tl_gexing"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:scaleType="fitCenter"
        android:id="@+id/iv_src"
        android:layout_width="75dp"
        android:layout_height="50dp"/>

    <ImageView
        android:layout_toRightOf="@id/iv_picture"
        android:src="@drawable/collect_video"
        android:layout_below="@+id/tl_gexing"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:scaleType="center"
        android:id="@+id/iv_video"
        android:layout_width="75dp"
        android:layout_height="50dp"/>

    <VideoView
        android:src="@drawable/collect_video"
        android:layout_toEndOf="@id/iv_src"
        android:layout_below="@+id/tl_gexing"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:scaleType="fitCenter"
        android:id="@+id/vv_picture"
        android:layout_width="75dp"
        android:layout_height="50dp"/>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_below="@+id/iv_picture"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tv_commit"
        android:textSize="16dp"
        android:text="@string/commit"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/text_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>