<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mini.paddling.minicard.view.TitleBarView
        android:id="@+id/tsv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_below="@id/tsv_title"
        android:id="@+id/ll_pas"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:src="@drawable/setting_pas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="5dp"
            android:text="@string/setting_pas"
            android:textColor="@color/text_black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_below="@id/ll_pas"
        android:id="@+id/ll_clear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:src="@drawable/setting_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="5dp"
            android:text="@string/setting_clear"
            android:textColor="@color/text_black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_cache"
            android:textSize="12sp"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_below="@id/ll_clear"
        android:id="@+id/ll_version"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:src="@drawable/setting_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="5dp"
            android:text="@string/setting_version"
            android:textColor="@color/text_black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_version"
            android:textSize="12sp"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_below="@id/ll_version"
        android:id="@+id/ll_about"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:src="@drawable/egg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="5dp"
            android:text="@string/setting_about"
            android:textColor="@color/text_black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
</RelativeLayout>